--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -35,3 +35,42 @@
   background-color: var(--bg-2);
   border: 1px solid var(--brand-1);
 }
+
+.modal-content {
+  height: 15rem;
+}
+
+.modal-body form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.modal-body form label {
+  font-size: 0.75rem;
+}
+
+.modal-body form input {
+  width: 100%;
+  height: 2.375rem;
+
+  background-color: var(--bg-2);
+  caret-color: var(--brand-4);
+
+  padding: 0 0.5rem;
+  margin-bottom: 0.25rem;
+  border-radius: 0.375rem;
+
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.modal-title.h4 {
+  font-size: 1rem;
+}
+
+.errorMessage {
+  color: var(--brand-2);
+  font-size: 0.75rem;
+}
