--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -69,6 +69,15 @@
   gap: 0.75rem;
 }
 
+.body__content .body__content--button:first-child button {
+  padding: 0;
+}
+
+.body__content .body__content--button:first-child a {
+  padding: 6px 12px;
+  display: block;
+}
+
 .body__content--button {
   position: relative;
 }
