--- a/src/pages/Activities/styles.css
+++ b/src/pages/Activities/styles.css
@@ -1,4 +1,5 @@
-.container--wrapper .list-group {
+.container--wrapper .list-group,
+.container--wrapper .accordion {
   width: 100%;
 }
 
@@ -12,14 +13,51 @@
 .grid--item h2 {
   font-size: 1rem;
   text-align: start;
-  text-overflow: ellipsis;
+}
 
+.grid--item h2,
+.accordion .accordion-body ul li {
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+
+.info--data {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
+
+.info--data h1 {
+  font-size: 1rem;
+}
+
+.info--data div:last-child {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+  font-size: 0.85rem;
+  font-weight: 500;
+}
+
+.list--taks {
+  margin-top: 2rem;
+}
+
+.list--taks p {
+  font-weight: bold;
+  font-size: 1.25rem;
 }
 
 @media (min-width: 767px) {
   .grid--item {
     grid-template-columns: 80% 1fr;
+  }
+
+  .info--data {
+    flex-direction: row;
+    align-items: baseline;
   }
 }
