--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -100,10 +100,12 @@
 }
 
 .modal-body form {
+  height: 100%;
+  gap: 0.5rem;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
 }
 
 .modal-body form label {
@@ -118,7 +120,6 @@
   caret-color: var(--brand-4);
 
   padding: 0 0.5rem;
-  margin-bottom: 0.25rem;
   border-radius: 0.375rem;
 
   font-size: 0.875rem;
