--- a/src/pages/Activities/styles.css
+++ b/src/pages/Activities/styles.css
@@ -35,6 +35,13 @@
   width: 100%;
 }
 
+.info--data--btnGroup {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
 .info--data h1 {
   font-size: 1rem;
 }
@@ -101,7 +108,5 @@
   .info--data {
     display: grid;
     grid-template-columns: 20% 65% 10%;
-    /* flex-direction: row;
-    align-items: baseline; */
   }
 }
